--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.2",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@web3-onboard/coinbase": "^2.0.0",
+    "@web3-onboard/core": "^2.2.2",
+    "@web3-onboard/fortmatic": "^2.0.2",
+    "@web3-onboard/injected-wallets": "^2.0.5",
+    "@web3-onboard/react": "^2.1.1",
+    "@web3-onboard/walletconnect": "^2.0.1",
+    "dotenv": "^16.0.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.41",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
+    "@types/node": "17.0.40",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.11",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.0",
     "typescript": "4.7.3"
   }
 }
